# openpets-codex

./: .gitattributes  .gitignore  AGENTS.md  ASSET_POLICY.md  CODE_OF_CONDUCT.md  COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pets.json  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  new-pet.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CREATE_A_PET.md  INSTALL.md  PET_FORMAT.md  TESTING.md
pets/: README.md
pets/hoshino-ai/: LICENSE-ASSETS.md  README.md  pet.json  pet.meta.json
pets/hoshino-ai/source/: palette.md  prompt.md
pets/makise-kurisu/: LICENSE-ASSETS.md  README.md  pet.json  pet.meta.json
pets/makise-kurisu/source/: palette.md  prompt.md
pets/sam-altman/: LICENSE-ASSETS.md  README.md  pet.json  pet.meta.json
pets/sam-altman/source/: palette.md  prompt.md
pets/tayama/: LICENSE-ASSETS.md  README.md  pet.json  pet.meta.json
pets/tayama/source/: palette.md  prompt.md
schemas/: codex-pet-v2.schema.json  pet-metadata.schema.json
src/openpets/: __init__.py  __main__.py  catalog.py  cli.py  contract.py  install.py  models.py  preview.py  registry.py  scaffold.py  validate.py
tests/: helpers.py  test_cli.py  test_contract.py  test_install.py  test_preview.py  test_registry.py  test_validate.py
